Added google maps api key and map fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,11 @@
 
     <string name="action_settings">Settings</string>
 
+
+    <string name="map">Mapa</string>
     <string name="about">O aplikacji</string>
     <string name="logout">Wyloguj</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
