--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,13 +4,28 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
 
-
+    <string name="list_of_favourites">Lista ulubionych</string>
     <string name="map">Mapa</string>
     <string name="about">O aplikacji</string>
     <string name="logout">Wyloguj</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_favourite_place_map">FavouritePlaceMapActivity</string>
+    <string name="add_place">Dodaj miejsce</string>
+    <string name="ok">OK</string>
+    <string name="map_not_ready">Mapa jeszcze nie gotowa</string>
+
+    <string name="favourite_place_map_info_title">Informacja</string>
+    <string name="favourite_place_map_info_message_location">Przenieś czerwone serce w swoje ulubione miejsce lub przytrzymaj dłużej na mapie w miejscu które chcesz zapisać</string>
+    <string name="favourite_place_map_info_message_nolocation">Przytrzymaj dłużej na mapie w miejscu które chcesz zapisać</string>
+
+
+    <string name="location_permission_denied">By wykorzystać wszystkie możliwości aplikacji MyPlaces włącz lokalizację</string>
+    <string name="permission_required_toast">Włączenie lokalizacji jest wymagane do poprawnego działania aplikacji</string>
+    <string name="permission_rationale_location">Dostęp do lokalizacji urządzenia jest wymagany</string>
+    <string name="add_place_form_my_location_button_label">Dodaj miejsce w którym jestem</string>
+    <string name="add_place_form_map_button_label">Dodaj miejsce z mapy</string>
 </resources>
