--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,15 +4,15 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_search">Search</string>
+    <string name="action_search">Wyszukaj</string>
+    <string name="action_info">Info</string>
+    <string name="action_done">Gotowe</string>
 
     <string name="list_of_favourites">Lista ulubionych</string>
     <string name="map">Mapa</string>
     <string name="about">O aplikacji</string>
     <string name="logout">Wyloguj</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_favourite_place_map">FavouritePlaceMapActivity</string>
     <string name="add_place">Dodaj miejsce</string>
     <string name="ok">OK</string>
@@ -48,6 +48,8 @@
     <string name="description">Opis</string>
     <string name="note">Notatka</string>
     <string name="deleted">Usunięto</string>
+    <string name="edit_place">Edycja miejsca</string>
+    <string name="saved">Zapisano</string>
 
     <array name="pick_photos_array">
         <item>Wybierz zdjęcie z galerii</item>
