--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="go_to_place">Przejdź do miejsca</string>
     <string name="cannot_find_location_alert">Nie znamy Twojej lokalizacji, wybierz miejsce na mapie</string>
     <string name="last_known_location">Ostatnia znana lokalizacja</string>
+    <string name="undo">Cofnij</string>
 
     <array name="pick_photos_array">
         <item>Wybierz zdjęcie z galerii</item>
