Added listeners and change row for my places list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,5 @@
     <string name="archive_no_places">Brak zarchiwizowanych miejsc</string>
     <string name="restore">Przywróć</string>
     <string name="no_description">Brak opisu</string>
+    <string name="archived">Zarchiwizowano</string>
 </resources>
