--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyPlaces</string>
+    <string name="app_name">myPlaces</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -13,6 +13,7 @@
     <string name="archive_of_places">Archiwum miejsc</string>
     <string name="about">O aplikacji</string>
     <string name="logout">Wyloguj</string>
+    <string name="search_places">Wyszukaj miejsca</string>
 
     <string name="title_activity_favourite_place_map">FavouritePlaceMapActivity</string>
     <string name="add_place">Dodaj miejsce</string>
@@ -43,10 +44,11 @@
     <string name="edit">Edytuj</string>
     <string name="delete">Usuń</string>
     <string name="details">Szczegóły</string>
+    <string name="details_of_place">Szczegóły miejsca</string>
     <string name="dialog_gps_is_off">Aplikacja nie działa w pełni gdy GPS jest wyłączony</string>
     <string name="yes">Tak</string>
     <string name="back">Cofnij</string>
-    <string name="are_you_sure_to_delete">Jesteś pewny że chcesz usunąć?</string>
+    <string name="are_you_sure_to_archive">Jesteś pewny że chcesz zarchiwizować?</string>
     <string name="description">Opis</string>
     <string name="note">Notatka</string>
     <string name="deleted">Usunięto</string>
@@ -70,6 +72,7 @@
     <string name="register_confirm_password">Powtórz hasło</string>
     <string name="my_places_no_places">Brak ulubionych miejsc :(</string>
     <string name="my_places_list_no_places_info">Dodaj jakieś klikając plusa na prawym dolnym rogu.</string>
+    <string name="location_request_settings_is_inadequate">Ustawienia lokalizacji są niewystarczające i nie mogą być poprawione w tym miejscu. Zmień w ustawieniach</string>
 
     <array name="pick_photos_array">
         <item>Wybierz zdjęcie z galerii</item>
@@ -82,4 +85,11 @@
     <string name="restore">Przywróć</string>
     <string name="no_description">Brak opisu</string>
     <string name="archived">Zarchiwizowano</string>
+    <string name="restored">Przywrócono</string>
+    <string name="archive">Zarchiwizuj</string>
+    <string name="permission_denied_explanation">Zezwolenie na lokalizacje jest konieczne do prawidłowego działania aplikacji</string>
+    <string name="settings">Ustawienia</string>
+    <string name="permission_rationale">Zezwolenie na lokalizacje jest konieczne do prawidłowego funkcjonowania aplikacji</string>
+    <string name="archived_places">Zarchiwizowane miejsca</string>
+    <string name="no_title">Brak tytułu</string>
 </resources>
