--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,8 @@
     <string name="session_expired">Sesja wygasła</string>
     <string name="logout_complete">Wylogowano</string>
     <string name="login_or_register">Zaloguj się lub zarejestruj</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="top_places">Top miejsc</string>
 </resources>
